--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,21 +5,26 @@ services:
     image: nginx:latest
     network_mode: host
     volumes:
-      - ./nginx/node.conf:/etc/nginx/conf.d/node.template
+      - ./nginx/node.conf:/etc/nginx/conf.d/node.template:ro
       - ./logs:/var/log/nginx
-    #ports:
-    #  - '8080:80'
+      - ./certbot/www:/var/www/certbot/:ro
+      - ./certbot/conf/:/etc/nginx/ssl/:ro
+    restart: always
     command: 'bash -c "cat /etc/nginx/conf.d/node.template > /etc/nginx/conf.d/default.conf && nginx -g ''daemon off;''"'
   node:
-    image: node:16.14
+    image: node:lts-alpine3.15
     network_mode: host
     user: node
     working_dir: /home/node
     environment:
       - NODE_ENV=production
     volumes:
-      - ./app:/home/node/app
+      - ./app:/home/node/app:ro
       - ./logs:/home/node/logs
-    #ports:
-    #  - '3000:3000'
+    restart: always
     command: 'node app/server.js'
+  # certbot:
+    # image: certbot/certbot:latest
+    # volumes:
+      # - ./certbot/www/:/var/www/certbot/:rw
+      # - ./certbot/conf/:/etc/letsencrypt/:rw
