--- a/nginx/node.conf
+++ b/nginx/node.conf
@@ -16,4 +16,8 @@ server {
     proxy_set_header X-Fowarded-Proto $scheme;
     proxy_cache_bypass $http_upgrade;
   }
+
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
 }
