--- a/nginx/node.conf
+++ b/nginx/node.conf
@@ -1,23 +1,38 @@
 server {
-  listen 80;
+    listen 80;
 
-  access_log off;
+    access_log off;
 
-  server_name localhost;
+    server_name ludotosk.it www.ludotosk.it;
 
-  location / {
-    proxy_pass http://localhost:3000; # con rete in bridge mode http://node:3000
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Fowarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Fowarded-Proto $scheme;
-    proxy_cache_bypass $http_upgrade;
-  }
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
-  location /.well-known/acme-challenge/ {
-    root /var/www/certbot;
-  }
+    location / {
+        return 301 https://ludotosk.it$request_uri;
+    }
+}
+
+server {
+    listen 443 default_server ssl http2;
+    listen [::]:443 ssl http2;
+
+    server_name example.org;
+
+    ssl_certificate /etc/nginx/ssl/live/example.org/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/example.org/privkey.pem;
+
+    location / {
+        proxy_pass http://localhost:3000; # con rete in bridge mode http://node:3000
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Fowarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Fowarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
 }
