fixato file certificato

--- a/nginx/node.conf
+++ b/nginx/node.conf
@@ -20,8 +20,8 @@ server {
 
     server_name example.org;
 
-    ssl_certificate /etc/nginx/ssl/live/example.org/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/example.org/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/live/ludotosk.it/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/ludotosk.it/privkey.pem;
 
     location / {
         proxy_pass http://localhost:3000; # con rete in bridge mode http://node:3000
