cambiate impostazioni nginx

--- a/nginx/node.conf
+++ b/nginx/node.conf
@@ -1,7 +1,9 @@
 server {
     listen 80;
+    listen [::]:80;
+    server_tokens off;
 
-    access_log off;
+    # access_log off;
 
     server_name ludotosk.it www.ludotosk.it;
 
@@ -18,7 +20,7 @@ server {
     listen 443 default_server ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name example.org;
+    server_name ludotosk.it www.ludotosk.it;
 
     ssl_certificate /etc/nginx/ssl/live/ludotosk.it/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/ludotosk.it/privkey.pem;
